# canister_contracts

./: README.md
cross_chain/: .gitignore  Cargo.toml  README.md  clear.sh  demo.sh  dfx.json  package.json  webpack.config.js
cross_chain/src/cross_chain/: Cargo.toml  cross_chain.did
cross_chain/src/cross_chain/src/: lib.rs
cross_chain/src/greeting/: Cargo.toml  greeting.did
cross_chain/src/greeting/src/: lib.rs
cross_chain/src/greeting_assets/src/: index.html  index.js
sync/: CrossChain.json  MultiPorterCrossChain.json  README.md  TwoPhaseCommitCrossChain.json  cross_chain.abi.json  package-lock.json  package.json
sync/config/: default.example  default.json
sync/src/: main.js  nft.js
sync/src/basic/: chainHandlerMgr.js
sync/src/basic/dfinity/: cross_chain.did.js  index.js
sync/src/basic/ethereum/: index.js
sync/src/basic/near/: index.js
sync/src/basic/platon/: index.js  platon.js
sync/src/crossChain/: relayerMgr.js
sync/src/crossChain/dfinity/: index.js  nearToDfinity.js
sync/src/crossChain/ethereum/: ethereumToEthereum.js  index.js  nearToEthereum.js  platonToEthereum.js
sync/src/crossChain/near/: dfinityToNear.js  ethereumToNear.js  index.js  platonToNear.js
sync/src/crossChain/platon/: index.js
